# blackbox-agent

./: .gitignore  LICENSE  README.md  install.ps1  pyproject.toml  requirements.txt  watchdog.py
agent/: __main__.py  client.py  collector.py  config.py  log.py  loop.py  normalize.py
audits/: AUDIT_2026-05-01.md
examples/: agent-config.example.json
install/linux/: install.sh  uninstall.sh
install/mac/: install.sh  uninstall.sh
install/windows/: install.ps1  uninstall.ps1
tests/: conftest.py  test_client.py  test_collector.py  test_config.py  test_log.py  test_loop.py  test_main.py  test_normalize.py
