[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostlogic-agent"
version = "1.1.0"
description = "GhostLogic Black Box endpoint telemetry agent — zero dependencies"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "GhostLogic AI"},
]
keywords = ["forensics", "telemetry", "endpoint", "monitoring", "evidence"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://ghostlogic.tech"
Repository = "https://github.com/GhostLogicAI/blackbox-agent"
Documentation = "https://ghostlogic.tech/docs"

[project.scripts]
ghostlogic-agent = "agent.__main__:main"

[tool.setuptools.packages.find]
include = ["agent*"]
